--- a/proximamente.html
+++ b/proximamente.html
@@ -139,7 +139,7 @@
     <p id="mensaje-oculto">Tampoco lo programó...</p>
 
     <!-- Enlace discreto para volver al inicio -->
-    <a href="MuseoSorolla.html" class="volver">Volver a la portada</a>
+    <a href="index.html" class="volver">Volver a la portada</a>
 
     <!-- LÓGICA (para bebes) -->
     <script>
@@ -159,4 +159,5 @@
     </script>
 
 </body>
+
 </html>
