--- a/proximamente.html
+++ b/proximamente.html
@@ -125,7 +125,7 @@
 
     <!-- 2. LA IMAGEN -->
     <div class="meme-container">
-        <img src="https://media.discordapp.net/attachments/1091673179895898203/1442191330670547084/meme.png?ex=692488d7&is=69233757&hm=64a7d85e98293e810b0117ffbd91c0ebf69605f9a2d50302a336dda8a7423b02&=&format=webp&quality=lossless" 
+        <img src="meme.png" 
              alt="Meme Developer" 
              class="meme-img">
     </div>
@@ -161,3 +161,4 @@
 </body>
 
 </html>
+
