--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
-            background-image: url('https://media.discordapp.net/attachments/1091673179895898203/1442083824405053480/Ninos_en_el_Mar_Playa_de_Valencia..webp?ex=692424b8&is=6922d338&hm=4f18577384511269176cc756b2b06df188af6f4e38ba3cefd8b48fc02fefafc8&=&format=webp');
+            background-image: url('Niños en el Mar, Playa de Valencia..webp');
         }
 
         .section-newsletter::before {
@@ -1031,4 +1031,5 @@
     </script>
 
 </body>
+
 </html>
