--- a/index.html
+++ b/index.html
@@ -760,10 +760,10 @@
     <main>
         <!-- CARRUSEL HERO -->
         <section class="hero">
-            <div class="hero-bg bg-1 active" style="background-image: url('https://media.discordapp.net/attachments/1091673179895898203/1442083825499766795/Paseo_a_orillas_del_mar_1909.webp?ex=692424b8&is=6922d338&hm=5d82c5583d816b4e759c6fcc8c210a9eb0d4499004a12eb9e894cb3a35839c6e&=&format=webp');"></div>
-            <div class="hero-bg bg-2" style="background-image: url('https://media.discordapp.net/attachments/1091673179895898203/1442083824807837707/Ninos_en_la_playa_1910.webp?ex=692424b8&is=6922d338&hm=b1a3d61b9eb1797d4186e85bd08a0080430b9271dfdea025c021da0f664a6008&=&format=webp');"></div>
-            <div class="hero-bg bg-3" style="background-image: url('https://media.discordapp.net/attachments/1091673179895898203/1442083796424851629/El_bote_blanco_1905.webp?ex=692424b1&is=6922d331&hm=d228167353340d2528bae9e97816405a2f221994c8d04abe159fd3a56cfa364a&=&format=webp');"></div>
-            <div class="hero-bg bg-4" style="background-image: url('https://media.discordapp.net/attachments/1091673179895898203/1442083826775097446/Triste_herencia_1899.webp?ex=692424b8&is=6922d338&hm=645a0fbf2cc9d41db166f7d4cab82512b7dd8df08f3a6698a2a8e90a5133f494&=&format=webp');"></div>
+            <div class="hero-bg bg-1 active" style="background-image: url('Paseo a orillas del mar (1909).webp');"></div>
+            <div class="hero-bg bg-2" style="background-image: url('Niños en la playa (1910).webp');"></div>
+            <div class="hero-bg bg-3" style="background-image: url('El bote blanco (1905).webp');"></div>
+            <div class="hero-bg bg-4" style="background-image: url('Triste herencia (1899).webp');"></div>
 
             <div class="hero-content">
                 <h1 class="h0 hero-title">La Casa de la Luz</h1>
@@ -809,7 +809,7 @@
         <!-- SECCIÓN 2: INFO SOROLLA -->
         <section class="section-info" id="museo">
             <div class="info-img-wrapper">
-                <img src="https://media.discordapp.net/attachments/1091673179895898203/1442083704171401257/Foto_de_joaquin.webp?ex=6924249b&is=6922d31b&hm=fae6e42a2b13dd5372cee72b7c7f1d72700f12c961b47e69038171a766af219e&=&format=webp" alt="Joaquín Sorolla">
+                <img src="Foto de joaquin.webp" alt="Joaquín Sorolla">
             </div>
             <div class="info-content">
                 <h1 class="h1-large">Joaquín Sorolla</h1>
@@ -832,37 +832,37 @@
                 
                 <!-- 1. Pescadores (Alto) -->
                 <div class="gallery-item obra-1">
-                    <img src="https://media.discordapp.net/attachments/1091673179895898203/1442083793761599718/Aun_dicen_que_el_pescado_es_caro.webp?ex=692424b1&is=6922d331&hm=5ddf1100ca9a7f512010bc7cbee3e8c37375ddd310c11fe0828afaa42c76bf7c&=&format=webp" alt="Aún dicen que el pescado es caro">
+                    <img src="¡Aún dicen que el pescado es caro!.webp" alt="Aún dicen que el pescado es caro">
                 </div>
 
                 <!-- 2. Madre (Bajo) -->
                 <div class="gallery-item obra-2">
-                    <img src="https://media.discordapp.net/attachments/1091673179895898203/1442083823746678876/madre.webp?ex=692424b8&is=6922d338&hm=fde403a6967ea8539f8deb5b7a9dc4a93db02a990f953ccfd85e9358c4eed22f&=&format=webp" alt="Madre">
+                    <img src="madre.webp" alt="Madre">
                 </div>
 
                 <!-- 3. Fotógrafo (Muy Alto) -->
                 <div class="gallery-item obra-3">
-                    <img src="https://media.discordapp.net/attachments/1091673179895898203/1442083826187767818/Retrato_del_fotografo_Christian_Franzen.webp?ex=692424b8&is=6922d338&hm=21c9e4895264f9cc43f156d637e2de9737b53f4de8af3c08ab57ac89588b36a3&=&format=webp" alt="Retrato del fotógrafo Christian Franzen">
+                    <img src="Retrato del fotógrafo Christian Franzen.webp" alt="Retrato del fotógrafo Christian Franzen">
                 </div>
 
                 <!-- 4. Balandrito (Bajo) -->
                 <div class="gallery-item obra-4">
-                    <img src="https://media.discordapp.net/attachments/1091673179895898203/1442083795632394280/El_balandrito.webp?ex=692424b1&is=6922d331&hm=3100bb848847c345a00b00fc0c92900475065a9050ebf25181f0885a731199fc&=&format=webp" alt="El balandrito">
+                    <img src="El balandrito.webp" alt="El balandrito">
                 </div>
 
                 <!-- 5. Remero (Alto) -->
                 <div class="gallery-item obra-5">
-                    <img src="https://media.discordapp.net/attachments/1091673179895898203/1442083798018691132/El_remero.webp?ex=692424b2&is=6922d332&hm=acbe68219ec55dcb9b46e09a3170b6fd8431e2633044ef0f99b8d9f7660ed8b0&=&format=webp" style="object-position: top;" alt="El remero">
+                    <img src="El remero.webp" style="object-position: top;" alt="El remero">
                 </div>
 
                 <!-- 6. Sombrero (Alto) -->
                 <div class="gallery-item obra-6">
-                    <img src="https://media.discordapp.net/attachments/1091673179895898203/1442083823214133309/Joaquin_Sorolla_004.jpg?ex=692424b8&is=6922d338&hm=094022c8044a53d2ac144d575d8e736b53af8d95993424858337ff4093219923&=&format=webp" alt="Retrato con sombrero">
+                    <img src="Joaquín_Sorolla_004.jpg" alt="Retrato con sombrero">
                 </div>
 
                 <!-- 7. Sentado (Alto) -->
                 <div class="gallery-item obra-7">
-                    <img src="https://media.discordapp.net/attachments/1091673179895898203/1442083797351792720/El_pintor_Aureliano_de_Beruete.webp?ex=692424b1&is=6922d331&hm=5336ec33d9fa6ab5f8203ef9331e1a9bb8ab19e0f66576f3ddc581013a9b11d5&=&format=webp" style="object-position: top;" alt="Retrato Aureliano">
+                    <img src="El pintor Aureliano de Beruete.webp" style="object-position: top;" alt="Retrato Aureliano">
                 </div>
 
                 <!-- 8. Niños (Bajo) -->
@@ -906,9 +906,9 @@
             </p>
             
             <div class="footer-logos-gob">
-                <img src="https://media.discordapp.net/attachments/1091673179895898203/1442083733086933034/Gobierno_de_espana.webp?ex=692424a2&is=6922d322&hm=f7c4648a487d31b5ddc5a123078c80dc91e946bfb5cd83e5b62035eba3612871&=&format=webp&width=1766&height=550" alt="Gobierno de España">
-                <img src="https://media.discordapp.net/attachments/1091673179895898203/1442083732424228894/BONO_CULTURAL_MACIZA_BLANCA_RGB.png?ex=692424a2&is=6922d322&hm=4f6156604dff31f525b803ac48724e5a5edb7c93199d5d6b58c92d1a3f5b67ae&=&format=webp&quality=lossless&width=870&height=817" alt="Bono Cultural">
-                <img src="https://media.discordapp.net/attachments/1091673179895898203/1442083733418016768/Museos_estatales.png?ex=692424a2&is=6922d322&hm=589ef7b8c79a3c05dcbbe98e925f443c45d0f9f0d0449759fc590420377ff40c&=&format=webp&quality=lossless&width=929&height=817" alt="Museos Estatales">
+                <img src="Gobierno de espana.webp" alt="Gobierno de España">
+                <img src="BONO CULTURAL MACIZA BLANCA RGB.png" alt="Bono Cultural">
+                <img src="Museos estatales.png" alt="Museos Estatales">
             </div>
         </div>
 
@@ -1033,3 +1033,4 @@
 </body>
 
 </html>
+
