--- a/index.html
+++ b/index.html
@@ -867,7 +867,7 @@
 
                 <!-- 8. Niños (Bajo) -->
                 <div class="gallery-item obra-8">
-                    <img src="https://media.discordapp.net/attachments/1091673179895898203/1442083824807837707/Ninos_en_la_playa_1910.webp?ex=692424b8&is=6922d338&hm=b1a3d61b9eb1797d4186e85bd08a0080430b9271dfdea025c021da0f664a6008&=&format=webp" alt="Niños en la playa">
+                    <img src="niños en la playa (1910).webp" alt="Niños en la playa">
                 </div>
                 <!-- GRACIAS A DIOS HE TERMINADO DE COPIAR Y PEGAR ENLACES -->
 
@@ -1033,4 +1033,5 @@
 </body>
 
 </html>
+
 
