--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
         <!-- CARRUSEL HERO -->
         <section class="hero">
             <div class="hero-bg bg-1 active" style="background-image: url('Paseo a orillas del mar (1909).webp');"></div>
-            <div class="hero-bg bg-2" style="background-image: url('Niños en la playa (1910).webp');"></div>
+            <div class="hero-bg bg-2" style="background-image: url('ninos_playa_1910.webp');"></div>
             <div class="hero-bg bg-3" style="background-image: url('El bote blanco (1905).webp');"></div>
             <div class="hero-bg bg-4" style="background-image: url('Triste herencia (1899).webp');"></div>
 
@@ -867,7 +867,7 @@
 
                 <!-- 8. Niños (Bajo) -->
                 <div class="gallery-item obra-8">
-                    <img src="niños en la playa (1910).webp" alt="Niños en la playa">
+                    <img src="ninos_playa_1910.webp" alt="Niños en la playa">
                 </div>
                 <!-- GRACIAS A DIOS HE TERMINADO DE COPIAR Y PEGAR ENLACES -->
 
@@ -1033,5 +1033,6 @@
 </body>
 
 </html>
+
 
 
